y.output
Terminals which are not used

   EXP
   LOG
   SQRT


Grammar

    0 $accept: line $end

    1 line: expr '\n'

    2 expr: expr '+' term
    3     | expr '-' term
    4     | term

    5 term: term '*' factor
    6     | term '/' factor
    7     | term '%' factor
    8     | term '^' factor
    9     | factor

   10 factor: '(' expr ')'
   11       | INTC
   12       | REALC


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1
'%' (37) 7
'(' (40) 10
')' (41) 10
'*' (42) 5
'+' (43) 2
'-' (45) 3
'/' (47) 6
'^' (94) 8
error (256)
EXP (258)
LOG (259)
SQRT (260)
INTC (261) 11
REALC (262) 12


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
line (18)
    on left: 1, on right: 0
expr (19)
    on left: 2 3 4, on right: 1 2 3 10
term (20)
    on left: 5 6 7 8 9, on right: 2 3 4 5 6 7 8
factor (21)
    on left: 10 11 12, on right: 5 6 7 8 9


state 0

    0 $accept: . line $end

    INTC   shift, and go to state 1
    REALC  shift, and go to state 2
    '('    shift, and go to state 3

    line    go to state 4
    expr    go to state 5
    term    go to state 6
    factor  go to state 7


state 1

   11 factor: INTC .

    $default  reduce using rule 11 (factor)


state 2

   12 factor: REALC .

    $default  reduce using rule 12 (factor)


state 3

   10 factor: '(' . expr ')'

    INTC   shift, and go to state 1
    REALC  shift, and go to state 2
    '('    shift, and go to state 3

    expr    go to state 8
    term    go to state 6
    factor  go to state 7


state 4

    0 $accept: line . $end

    $end  shift, and go to state 9


state 5

    1 line: expr . '\n'
    2 expr: expr . '+' term
    3     | expr . '-' term

    '\n'  shift, and go to state 10
    '+'   shift, and go to state 11
    '-'   shift, and go to state 12


state 6

    4 expr: term .
    5 term: term . '*' factor
    6     | term . '/' factor
    7     | term . '%' factor
    8     | term . '^' factor

    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    $default  reduce using rule 4 (expr)


state 7

    9 term: factor .

    $default  reduce using rule 9 (term)


state 8

    2 expr: expr . '+' term
    3     | expr . '-' term
   10 factor: '(' expr . ')'

    '+'  shift, and go to state 11
    '-'  shift, and go to state 12
    ')'  shift, and go to state 17


state 9

    0 $accept: line $end .

    $default  accept


state 10

    1 line: expr '\n' .

    $default  reduce using rule 1 (line)


state 11

    2 expr: expr '+' . term

    INTC   shift, and go to state 1
    REALC  shift, and go to state 2
    '('    shift, and go to state 3

    term    go to state 18
    factor  go to state 7


state 12

    3 expr: expr '-' . term

    INTC   shift, and go to state 1
    REALC  shift, and go to state 2
    '('    shift, and go to state 3

    term    go to state 19
    factor  go to state 7


state 13

    5 term: term '*' . factor

    INTC   shift, and go to state 1
    REALC  shift, and go to state 2
    '('    shift, and go to state 3

    factor  go to state 20


state 14

    6 term: term '/' . factor

    INTC   shift, and go to state 1
    REALC  shift, and go to state 2
    '('    shift, and go to state 3

    factor  go to state 21


state 15

    7 term: term '%' . factor

    INTC   shift, and go to state 1
    REALC  shift, and go to state 2
    '('    shift, and go to state 3

    factor  go to state 22


state 16

    8 term: term '^' . factor

    INTC   shift, and go to state 1
    REALC  shift, and go to state 2
    '('    shift, and go to state 3

    factor  go to state 23


state 17

   10 factor: '(' expr ')' .

    $default  reduce using rule 10 (factor)


state 18

    2 expr: expr '+' term .
    5 term: term . '*' factor
    6     | term . '/' factor
    7     | term . '%' factor
    8     | term . '^' factor

    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    $default  reduce using rule 2 (expr)


state 19

    3 expr: expr '-' term .
    5 term: term . '*' factor
    6     | term . '/' factor
    7     | term . '%' factor
    8     | term . '^' factor

    '*'  shift, and go to state 13
    '/'  shift, and go to state 14
    '%'  shift, and go to state 15
    '^'  shift, and go to state 16

    $default  reduce using rule 3 (expr)


state 20

    5 term: term '*' factor .

    $default  reduce using rule 5 (term)


state 21

    6 term: term '/' factor .

    $default  reduce using rule 6 (term)


state 22

    7 term: term '%' factor .

    $default  reduce using rule 7 (term)


state 23

    8 term: term '^' factor .

    $default  reduce using rule 8 (term)
